--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -8,31 +8,109 @@
   list-style: none;
   padding: 0px 20px;
 }
-
+.mobile_nav.active a {
+  color: #fff;
+}
 .navbar .mobile_nav {
   position: absolute;
   color: white;
-  background-color: black;
-  opacity: 0.9;
+  background-color: #303030;
+  opacity: 1;
   height: 100vh;
-  width: 30%;
+  width: 60%;
   max-width: 260px;
   top: 0px;
   left: 0px;
   transform: translateX(-100%);
-  transition: all 1s ease;
+  transition: all 1.3s ease;
 }
 .navbar .mobile_nav.active {
   transform: translateX(0%);
   z-index: 999;
 }
 .navbar .mobile_nav.active ul {
-  padding-left: 5%;
+  padding-left: 10%;
+  padding-top: 10%;
 }
 .navbar .mobile_nav ul li {
   list-style: none;
   padding: 6% 0%;
   font-size: 18px;
+}
+.navbar .profile {
+  position: relative;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  color: #fff;
+  background-color: #303030;
+}
+.profile .triangle {
+  position: absolute;
+  right: 10px;
+  top: -9px;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #303030;
+}
+.profile .profile-menu .options .option {
+  text-decoration: none;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  padding: 2% 0px;
+}
+.options .option img {
+  width: 25px;
+  height: 25px;
+  filter: invert(1);
+}
+.profile .profile-menu .options {
+  margin-left: 8%;
+}
+.profile .profile-menu .options .option a {
+  color: #fff;
+  margin-left: 10%;
+}
+.info .right p {
+  margin: 0px;
+}
+.info .right {
+  margin-left: 7%;
+}
+.info .right p:first-child {
+  text-transform: capitalize;
+}
+.profile .profile-menu {
+  top: 50px;
+  right: 0;
+  position: absolute;
+  width: 250px;
+  background-color: #303030;
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 10%), 0 2px 4px -1px rgb(0 0 0 / 6%);
+  z-index: 2;
+}
+.profile-menu .info {
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  border-bottom: 1px solid #fff;
+}
+.profile-menu .initials {
+  position: static;
+  width: 40px;
+  height: 40px;
+  background-color: #fff;
+  color: #303030;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  font-size: 14px;
 }
 .mobile_toggle img {
   width: 40px;
@@ -77,7 +155,7 @@
   background-color: #f1f1f1;
 }
 .blog-card-wrap h3 {
-    padding-top: 4%;
+  padding-top: 4%;
 }
 .blog-card {
   position: relative;
@@ -93,7 +171,7 @@
   position: absolute;
   top: 10px;
   right: 10px;
-  z-index: 99;
+  z-index: 1;
 }
 .blog-card .icons .icon {
   width: 35px;
@@ -150,9 +228,9 @@
   padding: 125px 25px;
 }
 .updates .container .router-button.button-desktop {
-    height: 20%;
-    margin-top: 3%;
-    justify-content: center;
+  height: 20%;
+  margin-top: 3%;
+  justify-content: center;
 }
 .blog-cards {
   position: relative;
@@ -292,6 +370,84 @@ a {
   width: 100%;
   height: 100%;
 }
+/* profile css */
+.profile .container {
+  max-width: 1000px;
+  padding: 60px 25px;
+}
+.profile .container h2 {
+  text-align: center;
+  margin-bottom: 16px;
+  font-weight: 300;
+  font-size: 32px;
+}
+.profile .container .profile-info {
+  border-radius: 8px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  padding: 32px;
+  background-color: #f1f1f1;
+  display: flex;
+  flex-direction: column;
+  max-width: 600px;
+  margin: 32px auto;
+}
+.profile .container .profile-info .initials {
+  position: initial;
+  width: 80px;
+  height: 80px;
+  font-size: 32px;
+  background-color: #303030;
+  color: #fff;
+  display: flex;
+  align-self: center;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+.profile .container .profile-info .admin-badge {
+  display: flex;
+  align-self: center;
+  color: #fff;
+  font-size: 14px;
+  padding: 8px 24px;
+  border-radius: 8px;
+  background-color: #303030;
+  margin: 16px 0;
+  text-align: center;
+  text-transform: capitalize;
+}
+.profile .container .profile-info .admin-badge .icon {
+  width: 14px;
+  height: auto;
+  margin-right: 8px;
+}
+.profile .container .profile-info .input {
+  margin: 16px 0;
+}
+.profile .container .profile-info .input label {
+  font-size: 14px;
+  display: block;
+  padding-bottom: 6px;
+}
+.admin-badge img {
+  width: 25px;
+  height: 25px;
+  filter: invert(1);
+}
+.admin-badge span {
+  margin-left: 20%;
+}
+.profile .container .profile-info .input input {
+  width: 100%;
+  border: none;
+  background-color: #f2f7f6;
+  padding: 8px;
+  height: 50px;
+}
+.profile .container .profile-info button {
+  align-self: center;
+}
 @media screen and (min-width: 900px) {
   .form-wrap .background {
     display: initial;
@@ -384,28 +540,19 @@ Loading spinner csss */
   animation: spin ease 1000ms infinite;
 }
 
-
-
-
-
-
-
-
-
-
 @media screen and (max-width: 767px) {
-    .blog-wrapper {
-        flex-direction: column-reverse!important;
-    }
-    .blog-wrapper .blog-content {
-        padding: 86px 24px!important;
-    }
-    .blog-cards {
-        padding: 4%!important;
-    }
-    .blog-card {
-        width: 49%!important;
-        min-height: 284px!important;
-        margin: 5px 0px;
-    }
+  .blog-wrapper {
+    flex-direction: column-reverse !important;
+  }
+  .blog-wrapper .blog-content {
+    padding: 86px 24px !important;
+  }
+  .blog-cards {
+    padding: 4% !important;
+  }
+  .blog-card {
+    width: 49% !important;
+    min-height: 284px !important;
+    margin: 5px 0px;
+  }
 }
