--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,3 +1,141 @@
+/* createpost css */
+.create-post {
+  position: relative;
+  height: 100%;
+}
+.create-post button {
+  margin-top: 0;
+}
+.create-post .router-button {
+  text-decoration: none;
+  color: #fff;
+}
+.create-post label,
+.create-post button,
+.create-post .router-button {
+  transition: 0.5s ease-in-out all;
+  align-self: center;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 20px;
+  padding: 12px 24px;
+  color: #fff;
+  background-color: #303030;
+  text-decoration: none;
+}
+.create-post .router-button:hover {
+  background-color: rgba(48, 48, 48, 0.7);
+}
+.create-post .container {
+  position: relative;
+  height: 100%;
+  padding: 10px 25px 60px;
+}
+.create-post .invisible {
+  opacity: 0 !important;
+}
+.create-post .err-message {
+  width: 100%;
+  padding: 12px;
+  border-radius: 8px;
+  color: #fff;
+  margin-bottom: 10px;
+  background-color: #303030;
+  opacity: 1;
+  transition: 0.5s ease all;
+}
+.create-post .err-message p {
+  font-size: 14px;
+}
+.create-post .err-message span {
+  font-weight: 600;
+}
+.create-post .blog-info {
+  display: flex;
+  margin-bottom: 32px;
+}
+.create-post .blog-info input:nth-child(1) {
+  min-width: 300px;
+}
+.create-post .blog-info input {
+  transition: 0.5s ease-in-out all;
+  padding: 10px 4px;
+  border: none;
+  border-bottom: 1px solid #303030;
+}
+.create-post .blog-info input:focus {
+  outline: none;
+  box-shadow: 0 1px 0 0 #303030;
+}
+.create-post .upload-file {
+  flex: 1;
+  margin-left: 16px;
+  position: relative;
+  display: flex;
+}
+.create-post .upload-file input {
+  display: none;
+}
+.create-post .upload-file .preview {
+  margin-left: 16px;
+  text-transform: initial;
+}
+.create-post .upload-file span {
+  font-size: 12px;
+  margin-left: 16px;
+  align-self: center;
+}
+.create-post .editor {
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+}
+.create-post .editor .quillWrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.upload-file label {
+  margin: 0px;
+}
+.create-post .editor .ql-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: scroll;
+}
+.ql-snow .ql-editor h1 {
+  font-size: 1.4rem;
+}
+.post-view {
+  min-height: 100%;
+}
+.post-view .container {
+  max-width: 1000px;
+  padding: 60px 25px;
+}
+.post-view .ql-editor {
+  padding: 0;
+}
+.post-view h2 {
+  margin-bottom: 16px;
+  font-weight: 300;
+  font-size: 32px;
+}
+.post-view img {
+  width: 100%;
+  margin-bottom: 32px;
+}
+.create-post .editor .ql-editor {
+  padding: 20px 16px 30px;
+}
+.create-post .blog-actions {
+  margin-top: 32px;
+}
+.create-post .blog-actions button {
+  margin-right: 16px;
+}
 /* navigation cass starts here */
 .navbar {
   justify-content: space-between;
