--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -29,7 +29,8 @@
 .create-post .container {
   position: relative;
   height: 100%;
-  padding: 10px 25px 60px;
+  padding-top: 2.4%;
+  padding-bottom: 1%;
 }
 .create-post .invisible {
   opacity: 0 !important;
@@ -46,6 +47,7 @@
 }
 .create-post .err-message p {
   font-size: 14px;
+  margin: 0px;
 }
 .create-post .err-message span {
   font-weight: 600;
@@ -106,14 +108,10 @@
   overflow: scroll;
 }
 .ql-snow .ql-editor h1 {
-  font-size: 1.4rem;
+  font-size: 1.3rem!important;
 }
 .post-view {
   min-height: 100%;
-}
-.post-view .container {
-  max-width: 1000px;
-  padding: 60px 25px;
 }
 .post-view .ql-editor {
   padding: 0;
@@ -125,7 +123,7 @@
 }
 .post-view img {
   width: 100%;
-  margin-bottom: 32px;
+  margin: auto;
 }
 .create-post .editor .ql-editor {
   padding: 20px 16px 30px;
@@ -641,7 +639,42 @@ button:hover {
 .modal .modal-content button {
   align-self: center;
 }
-
+.post-view h4 {
+  font-weight: 400;
+  font-size: 14px;
+  margin-bottom: 24px;
+}
+.preview.button-inactive {
+  background-color: #6c757d;
+}
+.post-view {
+  min-height: 100%;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 99;
+}
+.post-view .container {
+  width: 80%;
+  margin-top: 19vh;
+}
+.post-view .ql-editor {
+  padding: 0;
+}
+.post-view h2 {
+  margin-bottom: 16px;
+  font-weight: 300;
+  font-size: 32px;
+}
+.post-view img {
+  width: 100%;
+  margin-bottom: 32px;
+}
 /* 
 Loading spinner csss */
 .loader {
